linter_flake8_qt_output.txt
[94m
======================================================================[0m
[1m[94m             GOES_VFI LINTER RUNNER                [0m
[94m======================================================================
[0m
[1m[94m
[1mRunning Flake8-Qt-TR for PyQt files...[0m[0m
multiprocessing.pool.RemoteTraceback:
"""
Traceback (most recent call last):
  File "/Users/justin/Documents/Github/GOES_VFI/.venv/lib/python3.13/site-packages/pydocstyle/parser.py", line 427, in parse
    compile(src, filename, 'exec')
    ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/justin/Documents/Github/GOES_VFI/examples/imagery/check_recent_goes.py", line 36
    continue
    ^^^^^^^^
SyntaxError: 'continue' not properly in loop

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/opt/homebrew/Cellar/python@3.13/3.13.5/Frameworks/Python.framework/Versions/3.13/lib/python3.13/multiprocessing/pool.py", line 125, in worker
    result = (True, func(*args, **kwds))
                    ~~~~^^^^^^^^^^^^^^^
  File "/Users/justin/Documents/Github/GOES_VFI/.venv/lib/python3.13/site-packages/flake8/checker.py", line 81, in _mp_run
    ).run_checks()
      ~~~~~~~~~~^^
  File "/Users/justin/Documents/Github/GOES_VFI/.venv/lib/python3.13/site-packages/flake8/checker.py", line 525, in run_checks
    self.run_ast_checks()
    ~~~~~~~~~~~~~~~~~~~^^
  File "/Users/justin/Documents/Github/GOES_VFI/.venv/lib/python3.13/site-packages/flake8/checker.py", line 427, in run_ast_checks
    for line_number, offset, text, _ in runner:
                                        ^^^^^^
  File "/Users/justin/Documents/Github/GOES_VFI/.venv/lib/python3.13/site-packages/flake8_docstrings.py", line 188, in run
    for error in self._check_source():
                 ~~~~~~~~~~~~~~~~~~^^
  File "/Users/justin/Documents/Github/GOES_VFI/.venv/lib/python3.13/site-packages/flake8_docstrings.py", line 172, in _check_source
    for err in self._call_check_source():
               ~~~~~~~~~~~~~~~~~~~~~~~^^
  File "/Users/justin/Documents/Github/GOES_VFI/.venv/lib/python3.13/site-packages/pydocstyle/checker.py", line 145, in check_source
    module = parse(StringIO(source), filename)
  File "/Users/justin/Documents/Github/GOES_VFI/.venv/lib/python3.13/site-packages/pydocstyle/parser.py", line 441, in __call__
    return self.parse(*args, **kwargs)
           ~~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "/Users/justin/Documents/Github/GOES_VFI/.venv/lib/python3.13/site-packages/pydocstyle/parser.py", line 429, in parse
    raise ParseError() from error
pydocstyle.parser.ParseError: Cannot parse file.
"""

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/Users/justin/Documents/Github/GOES_VFI/.venv/bin/flake8", line 8, in <module>
    sys.exit(main())
             ~~~~^^
  File "/Users/justin/Documents/Github/GOES_VFI/.venv/lib/python3.13/site-packages/flake8/main/cli.py", line 23, in main
    app.run(argv)
    ~~~~~~~^^^^^^
  File "/Users/justin/Documents/Github/GOES_VFI/.venv/lib/python3.13/site-packages/flake8/main/application.py", line 198, in run
    self._run(argv)
    ~~~~~~~~~^^^^^^
  File "/Users/justin/Documents/Github/GOES_VFI/.venv/lib/python3.13/site-packages/flake8/main/application.py", line 187, in _run
    self.run_checks()
    ~~~~~~~~~~~~~~~^^
  File "/Users/justin/Documents/Github/GOES_VFI/.venv/lib/python3.13/site-packages/flake8/main/application.py", line 103, in run_checks
    self.file_checker_manager.run()
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^
  File "/Users/justin/Documents/Github/GOES_VFI/.venv/lib/python3.13/site-packages/flake8/checker.py", line 234, in run
    self.run_parallel()
    ~~~~~~~~~~~~~~~~~^^
  File "/Users/justin/Documents/Github/GOES_VFI/.venv/lib/python3.13/site-packages/flake8/checker.py", line 203, in run_parallel
    self.results = list(pool.imap_unordered(_mp_run, self.filenames))
                   ~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/homebrew/Cellar/python@3.13/3.13.5/Frameworks/Python.framework/Versions/3.13/lib/python3.13/multiprocessing/pool.py", line 873, in next
    raise value
pydocstyle.parser.ParseError: Cannot parse file.

[91mFlake8-Qt-TR found 69 translation issues in PyQt files. ❌[0m
[94m
======================================================================[0m
[1m[94m                   SUMMARY                      [0m
[94m======================================================================[0m

[91mFlake8-Qt-TR: 69 issues[0m

[1m[91mTotal: 69 issues found - Check output above for details ⚠️[0m
